scrollbars: fix for chrome

--- a/s/index.css
+++ b/s/index.css
@@ -5,6 +5,11 @@
 	box-sizing: border-box;
 }
 
+::-webkit-scrollbar { width: 4px; }
+::-webkit-scrollbar-track { background: transparent; }
+::-webkit-scrollbar-thumb { background: #333; border-radius: 1em; }
+::-webkit-scrollbar-thumb:hover { background: #444; }
+
 html, body {
 	font-size: 16px;
 	min-height: 100%;
